@@ -1,3 +1,8 @@
+010-10-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-get-inline-coding): Return `nil' in case of
+	errors.
+
 2010-10-20  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-send-command): Simplify last patch, and
